unit-43 query parameter AI configuration for BeerController pagination