@@ -51,19 +51,42 @@ class BeerControllerTest {
     }
 
     @Test
-    void testGetAllBeers() throws Exception {
-        // Given
-        given(beerService.getAllBeers()).willReturn(Arrays.asList(testBeer));
+    void testGetBeersPaged() throws Exception {
+            // Given
+            org.springframework.data.domain.Page<BeerDto> page = new org.springframework.data.domain.PageImpl<>(
+                    java.util.List.of(testBeer), org.springframework.data.domain.PageRequest.of(0, 1), 1);
+            given(beerService.getBeers(eq(null), any(org.springframework.data.domain.Pageable.class))).willReturn(page);
 
-        // When/Then
-        mockMvc.perform(get("/api/v1/beers")
-                .accept(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk())
-                .andExpect(content().contentType(MediaType.APPLICATION_JSON))
-                .andExpect(jsonPath("$", hasSize(1)))
-                .andExpect(jsonPath("$[0].id", is(1)))
-                .andExpect(jsonPath("$[0].beerName", is("Test Beer")));
-    }
+            // When/Then
+            mockMvc.perform(get("/api/v1/beers")
+                    .param("page", "0")
+                    .param("size", "1")
+                    .accept(MediaType.APPLICATION_JSON))
+                    .andExpect(status().isOk())
+                    .andExpect(content().contentType(MediaType.APPLICATION_JSON))
+                    .andExpect(jsonPath("$.content", hasSize(1)))
+                    .andExpect(jsonPath("$.content[0].id", is(1)))
+                    .andExpect(jsonPath("$.content[0].beerName", is("Test Beer")))
+                    .andExpect(jsonPath("$.totalElements", is(1)));
+        }
+
+        @Test
+        void testGetBeersWithBeanNameFilter() throws Exception {
+            // Given
+            org.springframework.data.domain.Page<BeerDto> page = new org.springframework.data.domain.PageImpl<>(
+                    java.util.List.of(testBeer), org.springframework.data.domain.PageRequest.of(0, 10), 1);
+            given(beerService.getBeers(eq("Test"), any(org.springframework.data.domain.Pageable.class))).willReturn(page);
+
+            // When/Then
+            mockMvc.perform(get("/api/v1/beers")
+                    .param("beanName", "Test")
+                    .param("page", "0")
+                    .param("size", "10")
+                    .accept(MediaType.APPLICATION_JSON))
+                    .andExpect(status().isOk())
+                    .andExpect(jsonPath("$.content", hasSize(1)))
+                    .andExpect(jsonPath("$.content[0].beerName", is("Test Beer")));
+        }
 
     @Test
     void testGetBeerById() throws Exception {
